# PairsBasedAnalysis

./: .gitignore  README.md  example_1.ipynb  pyproject.toml  r_install.R
Rscripts/: LOLA.R  extact_cpg_from_hg19.R
src/: extract_pairs.py  pairs_based_analysis.py
