[tool.poetry]
name = "pairsbasedanalysis"
version = "0.1.0"
description = ""
authors = ["Jan Binkowski <jan.binkowski@pum.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
statsmodels = "^0.14.0"
venn = "^0.1.3"
pandas = "^2.1.1"
numpy = "^1.26.1"
tqdm = "^4.66.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
scipy = "^1.11.3"
jupyterlab = "^4.0.7"
pyarrow = "^13.0.0"
kaleido = "0.2.0"
fastcluster = "^1.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
